prevent horizontal scrolling on body

--- a/services/self-service/src/main/resources/webapp/src/styles.css
+++ b/services/self-service/src/main/resources/webapp/src/styles.css
@@ -125,6 +125,7 @@ button {
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 .primary_color {
